--- a/theory/s1/main.tex
+++ b/theory/s1/main.tex
@@ -128,7 +128,7 @@
 
 \newpage
 \custompagestyle
-\setcounter{page}{1}
+\setcounter{page}{2}
 \renewcommand{\contentsname}{Содержание}
 \tableofcontents
 
@@ -179,32 +179,52 @@
 \quad Настоящая работа посвящена изучению современных подходов
 к разработке и оптимизации планировщиков, включая анализ
 их преимуществ, недостатков и возможных сфер применения.
-Основное внимание уделено вопросам моделирования задач
+Также внимание уделено вопросам моделирования задач
 планирования, выбора алгоритмов и оценки их производительности.
 \end{quote}
 
 \chapter{Планировщики ОС}
 \section{Переключение контекста и роль планировщика}
 \begin{quote}
-\quad \bf Переключение контекста \normalfont (англ. context switch) ---
+\bf Переключение контекста \normalfont (англ. context switch) ---
 это процесс сохранения состояния 
 текущего выполняющегося процесса и восстановления состояния
 следующего процесса, который будет запущен на выполнение.
 
-\quad Это фундаментальная операция в многозадачных системах, позволяющая
+Это фундаментальная операция в многозадачных системах, позволяющая
 эффективно использовать процессорное время. Однако ключевой вопрос
 заключается в том, какой процесс выбрать следующим
 для выполнения. 
 Ответ на этот вопрос дает алгоритм планирования,
 реализуемый в компоненте ядра операционной системы, известном
 как планировщик процессов.
+
+Планировщик процессов играет центральную роль в обеспечении
+стабильной и эффективной работы операционной системы, особенно
+в условиях множества одновременно выполняющихся задач.
+Без эффективного планировщика система могла бы столкнуться
+с ситуациями, когда одни процессы потребляют непропорционально
+много ресурсов, в то время как другие остаются без необходимой
+мощности для выполнения своих задач.
+
+В современных операционных системах планировщики постоянно
+эволюционируют, интегрируя новые технологии и методы для
+улучшения производительности и надежности. Например, адаптивные
+алгоритмы планирования могут динамически изменять приоритеты
+процессов в зависимости от текущих условий и требований,
+обеспечивая более гибкое и эффективное использование ресурсов.
+
+Таким образом, планировщики являются неотъемлемым компонентом
+операционных систем, обеспечивая их стабильную работу, высокую
+производительность и способность адаптироваться к постоянно
+меняющимся условиям эксплуатации.
 \end{quote}
 
 
 \chapter{Алгоритмы планирования}
 \section{Алгоритм первый пришел первый вышел (FIFO)}
 \begin{quote}
-\quad FIFO (First in first out) --- классический метод планирования,
+FIFO (First in first out) --- классический метод планирования,
 следует принципу «первым пришел --- первым обслужен». Процессы обрабатываются
 в порядке их поступления. Этот алгоритм отвечает за
 непосредственное распределение процессорного времени между потоками. 
@@ -220,7 +240,7 @@
 
 \section{Алгоритм кратчайшей работы следующей (SJN)}
 \begin{quote}
-\quad Алгоритм кратчайшей работы следующей (англ. shortest job next)
+Алгоритм кратчайшей работы следующей (англ. shortest job next)
 выбирает для выполнения тот процесс, который требует наименьшего 
 процессорного времени (англ. burst time).
 Одной из основных трудностей является оценка времени выполнения процесса,
@@ -232,7 +252,7 @@
 
 \section{Алгоритм очереди с приоритетами}
 \begin{quote}
-\quad Приоритетное планирование назначает каждому процессу числовой
+Приоритетное планирование назначает каждому процессу числовой
 приоритет, определяющий его порядок выполнения. Высокий приоритет
 (низкое числовое значение) означает более раннее выполнение.
 Однако этот метод сталкивается с проблемой старвации (голодания),
@@ -245,14 +265,14 @@
 
 \section{Алгоритм Раунд-Робин (RR)}
 \begin{quote}
-\quad Алгоритм Round Robin (RR) основан на вытесняющей многозадачности и
+Алгоритм Раунд-Робин (RR) основан на вытесняющей многозадачности и
 предоставляет каждому процессу фиксированный квант времени (q)
 для выполнения. После истечения этого времени процесс вытесняется
 и помещается в конец очереди. Этот метод обеспечивает равномерное
 распределение процессорного времени и высокую отзывчивость
 системы.
 
-\quad Однако выбор размера кванта времени критичен: слишком большой квант
+Однако выбор размера кванта времени критичен: слишком большой квант
 приводит к поведению, схожему с FIFO, а слишком маленький
 увеличивает накладные расходы на переключение контекста.
 Также Раунд-Робин может быть неэффективен для процессов
@@ -261,7 +281,7 @@
 
 \section{Алгоритм многоуровневых очередей}
 \begin{quote}
-\quad Метод многоуровневых очередей классифицирует процессы по различным
+Метод многоуровневых очередей классифицирует процессы по различным
 критериям и распределяет их по нескольким очередям с разными уровнями приоритетов.
 Внутри каждой очереди может применяться свой алгоритм планирования, например,
 Раунд-Робин или FIFO. Этот подход обеспечивает гибкость и позволяет
@@ -271,7 +291,7 @@
 
 \section{Модификация алгоритма 2.5}
 \begin{quote}
-\quad Модификация этого метода с обратной связью позволяет динамически
+Модификация этого метода с обратной связью позволяет динамически
 изменять приоритеты процессов на основе их поведения, предотвращая старвацию
 и улучшая общую производительность системы. Например, процессы, долго
 ожидающие выполнения, могут получать повышение приоритета, а активно работающие
@@ -379,45 +399,195 @@ $ T_{W_3} = 0,\ T_{W_2} = 5,\ T_{W_1} = 10 \implies T_{W_{AVG}} = 5 $
 
 
 \chapter{Реализации планировщиков потоков в Linux}
-\section{BFS (Brain Fuck Scheduler)}
+\section{Brain Fuck Scheduler (BFS)}
 \begin{quote}
-BFS был разработан Кон Коливасом в 2009 году как альтернативный планировщик
-для ядра Linux, его задача предоставить планировщик с более простым алгоритмом,
-который не требует настройки эвристики или параметров настройки 
-(англ. tuning parameters) для адаптации производительности к определенному
-типу вычислительной нагрузки.
-Коливас утверждал, что эти настраиваемые параметры сложны для понимания обычным
-пользователем, особенно в плане взаимодействия нескольких параметров друг
-с другом, и заявлял, что использование таких параметров настройки часто может
-привести к улучшению производительности в конкретном целевом типе вычислений
-ценой ухудшения производительности в общем случае ориентированный на уменьшение
-задержек и повышение отзывчивости системы, особенно в системах с однопоточными
-процессорами и низкими задержками.
+BFS был разработан Кон Коливасом в 2009 году как альтернативный
+планировщик для ядра Linux, его задача предоставить планировщик
+с более простым алгоритмом, который не требует настройки эвристики
+или параметров настройки (англ. tuning parameters) для адаптации
+производительности к определенному типу вычислительной нагрузки.
+Коливас утверждал, что эти настраиваемые параметры сложны для
+понимания обычным пользователем, особенно в плане взаимодействия
+нескольких параметров друг с другом, и заявлял, что использование
+таких параметров настройки часто может привести к улучшению
+производительности в конкретном целевом типе вычислений
+ценой ухудшения производительности в общем случае.
 
-BFS улучшает отзывчивость на настольных компьютерах Linux с менее чем 16 ядрами.
-В отличие от других планировщиков, BFS использует единую глобальную очередь
-для всех процессов, что упрощает управление и устраняет необходимость в сложных
-механизмах балансировки нагрузки между процессорами.
+BFS улучшает отзывчивость на настольных компьютерах Linux с менее
+чем 16 ядрами. В отличие от других планировщиков, BFS использует
+единую глобальную очередь для всех процессов, что упрощает управление
+и устраняет необходимость в сложных
+механизмах балансировки нагрузки между процессорами (ядрами).
 
-Каждому процессу присваивается виртуальный дедлайн, рассчитываемый на основе
-текущего времени, приоритета процесса и фиксированного интервала времени. 
+Каждому процессу присваивается виртуальный дедлайн,
+рассчитываемый на основе текущего времени, приоритета процесса
+и фиксированного интервала времени. 
 Это позволяет планировщику определять порядок выполнения задач,
 отдавая предпочтение процессам с более ранними дедлайнами.
 \end{quote}
 
-\section{CFS (Completely Fair Scheduler)}
+\section{Completely Fair Scheduler (CFS)}
 \begin{quote}
+CFS был разработан венгерским программистом из компании Red Hat
+Инго Молнаром и был включен в ядро Linux начиная с версии 2.6.23.
+Этот планировщик ориентирован на задачи класса SHED\_NORMAL 
+(т.е. на задачи, не имеющие ограничений на выполнение в реальном времени).
+CFS старается максимизировать две характеристики: использование процессора 
+(ядер процессора) и интерактивную производительность.
 
+В отличие от предыдущего планировщика O(1), использовавшегося в версиях
+ядра Linux 2.6, который поддерживал и переключал очереди выполнения
+активных и истекших задач, реализация планировщика CFS основана на
+очередях выполнения на каждом процессоре (ядре), узлами которых являются
+упорядоченные по времени планируемые объекты, которые хранятся
+отсортированными в виде красно-черных деревьев. CFS отказывается от
+старого понятия фиксированных временных срезов с определенными
+приоритетами и вместо этого стремится предоставить справедливую
+долю процессорного времени планируемым сущностям.
+
+\bf Планируемая сущность \normalfont (англ. task) ---
+минимальный объект который может
+спланировать ядро Linux. Однако ядро также может управлять группами
+потоков, целыми многопоточными процессами и даже всеми процессами
+определенного пользователя. Такая конструкция приводит к концепции
+планируемых объектов, где задачи группируются и управляются
+планировщиком как единое целое. Для того чтобы эта конструкция работала,
+каждый дескриптор задачи task\_struct содержит поле типа sched\_entity,
+которое представляет группу планирования к которой принадлежит эта задача.
+
+Каждая очередь типа cfs\_rq на каждом процессоре (ядре) сортирует
+структуры sched\_entity по времени в красно-черное дерево 
+(или <<rbtree>> на языке Linux), где самый левый узел занимает группа,
+получившая наименьший кусок времени выполнения 
+(который сохраняется в поле vruntime сущности).
+Узлы индексируются по времени выполнения процессором в наносекундах.
+Для каждого процесса также рассчитывается максимальное время выполнения,
+представляющее собой время, в течение которого процесс должен был
+бы выполняться на идеальном процессоре.
+Это время, в течение которого процесс ожидал запуска,
+деленное на общее количество процессов.
+
+Когда планировщик вызывается для запуска нового процесса 
+происходит следующая последовательность действий:
+
+1. Выбирается самый левый узел дерева планирования 
+(так как он будет иметь наименьшее время выполнения)
+и отправляется на выполнение.
+
+2. Если процесс просто завершает выполнение, он удаляется из системы
+и дерева планирования.
+
+3. Если процесс достигает своего максимального времени выполнения
+или иным образом останавливается (добровольно или через прерывание),
+он снова вставляется в дерево планирования на основе его нового
+затраченного времени выполнения.
+
+4. Из дерева выбирается новый крайний левый узел, и итерация повторяется.
+
+Если процесс проводит большую часть времени в состоянии сна,
+то значение затраченного времени будет низким, и он автоматически
+получит повышение приоритета, когда ему это понадобится.
+Следовательно, такие задачи не получают меньше процессорного времени,
+чем постоянно выполняющиеся.
+
+Сложность алгоритма, который вставляет узлы в очередь выполнения cfs\_rq
+планировщика CFS, составляет $ O(log N) $, где $ N $ -- общее количество
+групп. Выбор следующего объекта для запуска осуществляется за
+постоянное время, поскольку самый левый узел всегда находится в кэше.
+\end{quote}
+
+\section{Earliest eligible virtual deadline first (EEVDF)}
+\begin{quote}
+Начиная с версии ядра Linux 6.6 (29 октября 2023 года) CFS заменен
+(в качестве стандартного планировщика) на планировщик EEVDF.
+
+Впервые был описан в статье 1995 года
+<<Earliest Eligible Virtual Deadline First>>, 
+написанной Ионом Стоикой и Хусейном Абдель-Вахабом.
+EEVDF использует понятия виртуального времени, подходящего времени,
+виртуальных запросов и виртуальных сроков для определения приоритета
+планирования. Также обладает свойством, что когда планируемая сущность
+продолжает запрашивать обслуживание, объем полученного обслуживания
+всегда находится в пределах максимального квантового размера,
+на который сущность имеет право.
+
+Подробно EEVDF в данной работе не разбирается, в целом этот планировщик
+достаточно похож на BFS. 
 \end{quote}
 
 \chapter{Планирование в пользовательском пространстве}
+\section{Введение}
+\begin{quote}
+Несмотря на все усилия разработчиков ОС иногда бывает полезно
+построить свой планировщик который будет работать в пользовательском
+пространстве и использовать собственные модели, например, для более
+эффективного переключения между потоками в сетевых задачах.
+\end{quote}
+
 \section{Планировщик в Go}
+\begin{quote}
+\bf Горутина \normalfont (англ. goroutine) --- легковесный 
+(по сравнению с планируемой сущностью) поток, управляемый планировщиком
+рантайма языка Go.
+Планировщик Go основан на модели M:N 
+(M горутин на N потоках ОС) и использует следующие ключевые компоненты:
 
-\section{Планировщик в userver}
+1. G (Goroutine): Представляет собой структуру, описывающую горутину,
+включая её стек, состояние и другие метаданные.
 
+2. M (Machine): Соответствует потоку ОС. M выполняет горутины.
 
+3. P (Processor): Представляет собой контекст выполнения,
+необходимый для выполнения горутин, включая локальные очереди горутин
+и управление ресурсами.
+
+При запуске программы Go (рантайм языка) инициализирует пул P контекстов,
+количество которых определяется переменной GOMAXPROCS.
+По умолчанию GOMAXPROCS устанавливается равным количеству доступных
+ядер процессора, но это значение может быть изменено пользователем.
+
+Далее работа планировщика описывается следующей последовательностью:
+1. Создание горутин: При создании новой горутины она помещается
+в очередь готовых задач (англ. run queue).
+
+2. Выбор P: Планировщик выбирает P для выполнения горутины.
+Обычно используется локальная очередь P для минимизации синхронизации.
+
+3. Назначение M: Каждому P назначается M. Если все M заняты, новые M
+создаются по мере необходимости до достижения GOMAXPROCS.
+
+4. Выполнение: M выполняет горутину, извлекая её из очереди P.
+При завершении горутина освобождается, и M может перейти
+к следующей задаче.
+
+\end{quote}
 
 \chapter*{Заключение}
+\begin{quote}
+\quad В данной работе были рассмотрены основные подходы и алгоритмы
+планирования в операционных системах и пользовательском пространстве,
+их реализации в различных контекстах.
+Были проанализировали ключевые аспекты планировщиков, такие как роль 
+переключения контекста, особенности алгоритмов планирования.
+Особое внимание было уделено планировщикам, реализованным в ядре Linux.
+
+\quad В контексте развития вычислительных систем и повышения требований
+к их производительности и отзывчивости, результаты данной работы
+формируют важный теоретический и прикладной фундамент для дальнейших
+исследований. Они подчеркивают ключевые аспекты, такие как минимизация
+задержек, равномерное распределение ресурсов и снижение сложности
+настройки планировщиков, что является важным для построения
+высокоэффективных и адаптивных систем.
+
+\quad Таким образом, проведённое исследование не только предоставляет
+всесторонний анализ существующих решений, но и намечает направления
+для совершенствования планировщиков. В будущем планируется уделить 
+внимание дальнейшей интеграции планировщиков с адаптивными алгоритмами 
+что обеспечит ещё более высокую производительность и стабильность систем.
+Это позволит решать актуальные задачи, стоящие перед современными
+вычислительными средами, и повысить эффективность их работы в различных
+сферах.
+\end{quote}
 
 
 \renewcommand{\bibname}{\large СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
